--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <div class="flex items-center">
-        <a routerLink="/movies" class="flex shrink-0 gap-2 cursor-pointer">
+        <a routerLink="/app/movies" class="flex shrink-0 gap-2 cursor-pointer">
             <fa-icon [icon]='icons.logo' class="text-xl text-white"></fa-icon>
             <span class="text-xl text-white">Movie hub</span>
         </a>
